[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Actors/Overworld/BaseActors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Actors/Exclamation Mark.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Actors/InteractableActor.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=2]
resource_local_to_scene = true
margin = 0.001
radius = 0.32
height = 0.01

[sub_resource type="SphereShape" id=1]
resource_local_to_scene = true

[node name="InteractableActor" instance=ExtResource( 1 )]
script = ExtResource( 3 )
dialogue_file = "res://Dialogues/Deafult.json"

[node name="CollisionShape" parent="." index="0"]
shape = SubResource( 2 )

[node name="InteractableArea" type="Area" parent="." index="4"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="InteractableArea" index="0"]
shape = SubResource( 1 )

[node name="ExclamationMark" type="Sprite3D" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
visible = false
billboard = 1
alpha_cut = 2
texture = ExtResource( 2 )

[connection signal="body_entered" from="InteractableArea" to="." method="_on_InteractableArea_body_entered"]
[connection signal="body_exited" from="InteractableArea" to="." method="_on_InteractableArea_body_exited"]
